# eyesight

./: Makefile  Makefile.in  README.md  config.status  configure
autom4te.cache/: output.0  traces.0  traces.1
branches/eyesight_multi_file/: GSOC  config.h.in  configure.in  libtool
branches/eyesight_multi_file/autom4te.cache/: output.1  requests
branches/eyesight_multi_file/data/: Makefile  Makefile.in
branches/eyesight_multi_file/data/other/: Makefile.in
branches/eyesight_multi_file/data/themes/: Makefile.in
branches/eyesight_multi_file/data/themes/docker/: Makefile  Makefile.in  docker.edj
branches/eyesight_multi_file/data/themes/docker/main_window/: foreground.edc
branches/eyesight_multi_file/src/plugins/pdf/: Makefile  Makefile.in  pdf.c
data/other/: Makefile
data/themes/: Makefile
data/themes/docker/: border_opaque.edc  border_trans.edc  main.edc
data/themes/docker/main_window/foreground/: error_dialog.edc  error_dialog_programs.edc  nav.edc  nav_programs.edc  toolbar1_sw.edc  top_bar.edc
eyesight/: .cdtproject  .project  GSOC  README  aclocal.m4  configure.in  edje.spec
eyesight/data/themes/: Makefile
eyesight/data/themes/docker/: Makefile  docker.edj  main.edc
eyesight/data/themes/docker/main_window/: background.edc  controls.edc  toolbar2.edc  toolbar3.edc  top_bar.edc
eyesight/data/themes/docker/main_window/controls/: error_dialog.edc  top_bar_programs.edc
eyesight/src/: Eyesight.h
eyesight/src/plugins/: Makefile.am
eyesight/src/plugins/document/: Makefile.am  defines.h  document.c  document.h  view.h
eyesight/src/plugins/pdf/: Makefile.am  pdf.c  pdf.h
eyesight2/: config.h  config.status  configure.in
eyesight2/data/themes/docker/: Makefile.am  icons.edc  main.edc  toolbar1.edc  toolbar1_icon.edc  toolbar2_icon.edc
eyesight2/data/themes/docker/main_window/: background.edc  controls.edc
eyesight2/data/themes/docker/main_window/controls/: docker.edc  error_dialog.edc  nav.edc  toolbar1_sw.edc  toolbar2_sw.edc  toolbar3.edc  toolbar3_sw.edc
eyesight2/src/plugins/: Makefile.am
eyesight2/src/plugins/pdf/: Makefile.am  animations.c  animations.h  pdf.c  pdf.h  toolbar.c  toolbar.h
src/: Makefile  Makefile.in
src/plugins/: Makefile  Makefile.am  Makefile.in
src/plugins/pdf/: Makefile.am  animations.c  animations.h  pdf.h
src/plugins/pdf/.deps/: pdf_la-animations.Plo  pdf_la-pdf.Plo
src/plugins/pdf/.libs/: pdf.lai
trunk/eyesight/: .cdtproject  AUTHORS  GSOC  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  config.status  configure  configure.in  edje.spec  gentodo  libtool
trunk/eyesight/data/: Makefile.in
trunk/eyesight/data/docker/: Makefile.in  main.edc
trunk/eyesight/data/docker/main_window/: docker.edc  main_window.edc
trunk/eyesight/data/themes/: Makefile.in
trunk/eyesight/data/themes/docker/: Makefile.am  main.edc  toolbar2_drawer.edc  toolbar2_icon.edc
trunk/eyesight/data/themes/docker/main_window/: background.edc  error_dialog.edc  main_window.edc  toolbar1.edc  toolbar3.edc  top_bar.edc
trunk/eyesight/data/themes/docker/main_window/controls/: error_dialog.edc
trunk/eyesight/src/: Eyesight.h  Makefile.in
trunk/eyesight/src/plugins/: Makefile
trunk/eyesight/src/plugins/document/: Makefile.am  animations.c  defines.h  document.c  toolbar.c  toolbar.h
trunk/eyesight/src/plugins/pdf/: Makefile.am  pdf.c  pdf.h
trunk/eyesight2/: TODO  configure  configure.in
trunk/eyesight2/data/other/: eyesight.desktop
trunk/eyesight2/data/themes/docker/: error_dialog.edc  icons.edc  main.edc  text_entry.edc  toolbar1_icon.edc  toolbar2.edc  toolbar2_icon.edc
trunk/eyesight2/data/themes/docker/main_window/: controls.edc  error_dialog_programs.edc
trunk/eyesight2/src/plugins/pdf/: Makefile.am  animations.c  pdf.c  pdf.h  toolbar.c  toolbar.h
trunk/win32/: notes080519_1.txt  notes080519_2.txt  notes080519_3.txt
trunk/win32/e17_icons/: README.txt
trunk/win32/e17_win32/libs/ecore/win32/: set_env.bat
trunk/win32/e17_win32/libs/edje/win32/: set_env.bat
trunk/win32/e17_win32/libs/efreet/win32/: set_env.bat
trunk/win32/e17_win32/libs/embryo/win32/: set_env.bat
trunk/win32/e17_win32/libs/evas/win32/: todo.txt
trunk/win32/e17_win32/proto/evil/win32/: MANIFEST.txt  set_env.bat
wiki/: SummerOfCode2008.wiki  TODO.wiki
win32/: notes080519_1.txt  notes080519_3.txt
win32/e17_notes/libs/edje/src/lib/: edje.h.txt  edje_edit.c.txt  edje_edit.h.txt
win32/e17_notes/libs/efreet/src/lib/: efreet.h.txt  efreet_desktop.c.txt  efreet_ini.c.txt  efreet_private.h.txt
win32/e17_notes/libs/embryo/src/lib/: embryo_private.h.txt
win32/e17_notes/proto/evil/src/lib/: evil.c.txt  evil.h.txt
win32/e17_win32/apps/expedite/win32/: set_env.bat
win32/e17_win32/apps/expedite/win32/vs8/: expedite.vcproj
win32/e17_win32/libs/eet/win32/: MANIFEST.txt  README.txt
win32/e17_win32/libs/efreet/win32/: set_env.bat
win32/e17_win32/libs/evas/win32/: set_env.bat  todo.txt
win32/e17_win32/proto/evil/win32/: MANIFEST.txt  README.txt  set_env.bat
(+182 files in other folders)
