dnl Process this file with autoconf to produce a configure script.

# get rid of that stupid cache mechanism
rm -f config.cache

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(eyesight, 0.0.1.001)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST
AM_ENABLE_SHARED
AM_PROG_LIBTOOL

AC_CHECK_LIB(dl, dlopen, dlopen_libs=-ldl)

PKG_CHECK_MODULES(EYESIGHT,
		  evas
		  ecore
		  edje)

AC_OUTPUT([
Makefile
src/Makefile
src/bin/Makefile
src/plugins/Makefile
src/plugins/pdf/Makefile
data/Makefile
data/themes/Makefile
data/themes/docker/Makefile
])
